[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/uipack_fixed/PNG/grey_button12.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PixelOperator8-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Scripts/GUI/GUI.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/PixelOperatorMonoHB8.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Animations/show_message.tres" type="Animation" id=5]
[ext_resource path="res://src/Animations/hide_message.tres" type="Animation" id=6]
[ext_resource path="res://src/GUI/DialogSystem.tscn" type="PackedScene" id=7]


[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 10, 49 )
modulate_color = Color( 0.0745098, 0.109804, 0.121569, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 10, 0, 25, 49 )
modulate_color = Color( 0.0745098, 0.109804, 0.121569, 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 1 )
region_rect = Rect2( 39, 0, 10, 49 )
modulate_color = Color( 0.0745098, 0.109804, 0.121569, 1 )

[sub_resource type="Animation" id=8]
resource_name = "info_message_hide"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("InfoMessages/InfoMessage:custom_colors/font_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.0156863, 0.0156863, 1 ), Color( 0.713726, 0.0156863, 0.0156863, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InfoMessages/InfoMessage:custom_colors/font_color_shadow")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.313726, 0, 0, 1 ), Color( 0.313726, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "info_message_show"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("InfoMessages/InfoMessage:custom_colors/font_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.0156863, 0.0156863, 0 ), Color( 0.713726, 0.0156863, 0.0156863, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InfoMessages/InfoMessage:custom_colors/font_color_shadow")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.313726, 0, 0, 0 ), Color( 0.313726, 0, 0, 1 ) ]
}

[node name="GUI" type="CanvasLayer"]
layer = 5
script = ExtResource( 3 )

[node name="InfoMessages" type="HBoxContainer" parent="."]
margin_left = 14.2996
margin_top = 12.2996
margin_right = 252.3
margin_bottom = 39.2996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoMessage" type="Label" parent="InfoMessages"]
margin_top = 4.0
margin_right = 177.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.713726, 0.0156863, 0.0156863, 0 )
custom_colors/font_color_shadow = Color( 0.313726, 0, 0, 0 )
text = "killed by..."

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -261.0
margin_top = 5.0
margin_right = -9.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 65.0
margin_top = 6.0
margin_right = 187.0
margin_bottom = 48.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 122.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.137255, 0.129412, 0.129412, 1 )
text = "FPS:"

[node name="Health" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 122.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.137255, 0.129412, 0.129412, 1 )
text = "Health: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageContainer" type="HBoxContainer" parent="."]
visible = false
material = SubResource( 2 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -110.0
margin_right = -14.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MessageContainer"]
margin_right = 921.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="margin" type="VBoxContainer" parent="MessageContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 103.0
rect_min_size = Vector2( 25, 0 )

[node name="Panel" type="Panel" parent="MessageContainer/HBoxContainer/margin"]
margin_right = 25.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="MessageContainer/HBoxContainer"]
margin_left = 25.0
margin_right = 896.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 4 )

[node name="message_label" type="Label" parent="MessageContainer/HBoxContainer/PanelContainer"]
margin_top = 45.0
margin_right = 871.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.784314, 0.8, 1, 1 )
text = "lalasd"
align = 1
uppercase = true

[node name="margin3" type="VBoxContainer" parent="MessageContainer/HBoxContainer"]
margin_left = 896.0
margin_right = 921.0
margin_bottom = 103.0
rect_min_size = Vector2( 25, 0 )

[node name="Panel" type="Panel" parent="MessageContainer/HBoxContainer/margin3"]
margin_right = 25.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide_message = ExtResource( 6 )
anims/show_message = ExtResource( 5 )

[node name="MessageTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "Timer used to control the time a message keeps visible at screen."
}

[node name="DialogSystem" parent="." instance=ExtResource( 7 )]
visible = false

[node name="InfoMessagesAnims" type="AnimationPlayer" parent="."]
anims/info_message_hide = SubResource( 8 )
anims/info_message_show = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]
